target_os = "linux"
target_cpu = "x64"
v8_target_cpu = "x64"

is_clang = true
is_component_build = false
is_debug = false

clang_use_chrome_plugins = false
dcheck_always_on = false
enable_rust = true
enable_rust_cxx = true
icu_copy_icudata_to_root_build_dir = false
icu_use_data_file = false
simple_template_names = false
symbol_level = 0
treat_warnings_as_errors = false
use_clang_modules = false
use_debug_fission = false
use_dummy_lastchange = true
use_llvm_libatomic = false
use_relative_vtables_abi = false

v8_array_buffer_internal_field_count = 2
v8_array_buffer_view_internal_field_count = 2
v8_depend_on_icu_data_file = false
v8_deprecation_warnings = false
v8_enable_future = false
v8_enable_fuzztest = false
v8_enable_handle_zapping = false
v8_enable_i18n_support = true
v8_enable_javascript_promise_hooks = true
v8_enable_pointer_compression = false
v8_enable_private_mapping_fork_optimization = true
v8_enable_sandbox = false
v8_enable_snapshot_compression = false
v8_enable_temporal_support = true
v8_enable_test_features = false
v8_enable_v8_checks = false
v8_imminent_deprecation_warnings = false
v8_monolithic = true
v8_promise_internal_field_count = 1
v8_static_library = true
v8_typed_array_max_size_in_heap = 0
v8_use_default_hasher_secret = false
v8_use_external_startup_data = false
v8_use_zlib = false
