target_os = "mac"
target_cpu = "x64"
v8_target_cpu = "x64"

is_clang = false
use_sysroot = false
v8_use_snapshot = true
v8_static_library = true
v8_monolithic = true

v8_enable_i18n_support = true
v8_enable_builtins_optimization = true
v8_enable_javascript_promise_hooks = true
v8_enable_pointer_compression = false
v8_enable_verify_predictable = false
v8_enable_verify_csa = false
v8_enable_sandbox = false
v8_enable_future = false
v8_enable_gdbjit = false
v8_enable_snapshot_compression = false
v8_enable_handle_zapping = false
v8_enable_verify_heap = false
v8_enable_fuzztest = false
v8_enable_v8_checks = false
v8_enable_private_mapping_fork_optimization = false

is_component_build = false
is_official_build = false
is_debug = false
is_cfi = false
is_msan = false
is_tsan = false
is_asan = false
dcheck_always_on = false
v8_use_zlib = false
v8_use_external_startup_data = false
v8_deprecation_warnings = false
v8_imminent_deprecation_warnings = false
v8_depend_on_icu_data_file = false
v8_promise_internal_field_count = 1
v8_typed_array_max_size_in_heap = 0
symbol_level = 1
use_custom_libcxx = false
use_custom_libcxx_for_host = false
use_debug_fission = false
treat_warnings_as_errors = false

# v8_enable_shared_ro_heap = false
# use_aura = false
# use_dbus = false
# use_gio = false
# use_glib = false
# use_ozone = false
# use_udev = false
# proprietary_codecs = false
# toolkit_views = false
# use_dummy_lastchange = true
# clang_use_chrome_plugins = false
